# bytie-moe

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: main.yml  rust.yml
backend/: Cargo.toml
backend/src/: main.rs
config/: nginx.conf
frontend/: Cargo.toml
frontend/src/: cat.rs  lib.rs  mesh.rs  shader.rs  stuff.rs
src/: index.js
src/styles/: main.scss
src/wasm/: Cargo.toml
src/wasm/src/: cube.rs  lib.rs  mesh.rs  shader.rs  stuff.rs
static/: template.html
static/styles/: main.scss
